fixed horizontal scroll on small devices html, body overflow-x: hidden

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -6,6 +6,9 @@
     --brown: rgb(255, 115, 0)
 }
 
+html {
+    overflow-x: hidden;
+}
 body {
     display: flex;
     flex-direction: column;
@@ -14,10 +17,11 @@ body {
     margin: 20px;
     background: black;
     height: 100vh;
-    /*width: 100vw;*/
+    width: 100vw;
     box-sizing: border-box;
     min-height: fit-content;
     /*min-width: fit-content;*/
+    overflow-x: hidden;
 
 }
 
@@ -37,7 +41,7 @@ body {
     position: relative;
     top: 0;
     left: 5%;
-    z-index: 300;
+    z-index: 10;
     color: white;
     display: flex;
     flex-direction: column;
